--- a/server/plugins/ItemsAdder/storage/items_ids_cache.yml
+++ b/server/plugins/ItemsAdder/storage/items_ids_cache.yml
@@ -56,6 +56,7 @@ DIAMOND_SWORD:
   mjy:shouhuzhe_sword: 55
   mjy:test_sword: 56
   mjy:test2_sword: 57
+  mjy:tongkuzhe_sword: 58
 LEATHER_HELMET:
   itemsadder:ruby_head: 1
   itemsadder:spinel_head: 2
