--- a/server/plugins/ScoreBoard/config.yml
+++ b/server/plugins/ScoreBoard/config.yml
@@ -4,13 +4,14 @@ ScoreBoard:
     Title: '&4> &c&l欢迎 %player_name% &4<'
     Line1: '&6%vipSystem_vipGroup%'
     Line2: '&2%vipSystem_leftTime%'
-    Line3: '今日%checkInSystem_isCheckIn%'
-    Line4: '&f共签到&2%checkInSystem_days%&f天'
-    Line5: '&f挖矿点数:&2%antiXray_points%'
-    Line6: '队伍:%dxl_group_name%'
-    Line7: '%pvpSwitch_status%'
-    Line8: '%peterHelper_itemInfo%'
-    Line9: 'Armor: %peterHelper_armorInfo%'
-    Line10: 'TPS:%server_tps%'
-    Line11: '金币: %vault_eco_balance%'
-    Line12: '点券: %playerpoints_points%'
+    Line3: '&f等级:&6%levelSystem_level% &f>> &f%levelSystem_current_exp%/%levelSystem_required_exp%'
+    Line4: '今日%checkInSystem_isCheckIn%'
+    Line5: '&f共签到&2%checkInSystem_days%&f天'
+    Line6: '&f挖矿点数:&2%antiXray_points%'
+    Line7: '队伍:%dxl_group_name%'
+    Line8: '%pvpSwitch_status%'
+    Line9: '%peterHelper_itemInfo%'
+    Line10: 'Armor: %peterHelper_armorInfo%'
+    Line11: 'TPS:%server_tps%'
+    Line12: '金币: %vault_eco_balance%'
+    Line13: '点券: %playerpoints_points%'
