--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: owner,equipment,location,type,scoreboardtrait,inventory,gravity,lookclose,spawned,mounttrait
+    traitnames: mounttrait,lookclose,location,spawned,gravity,inventory,scoreboardtrait,type,owner,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -184,7 +184,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: owner,equipment,location,type,inventory,scoreboardtrait,gravity,lookclose,spawned,fishshop,mounttrait
+    traitnames: mounttrait,lookclose,location,spawned,gravity,inventory,scoreboardtrait,type,owner,equipment,fishshop
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -231,7 +231,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: equipment,owner,location,type,scoreboardtrait,inventory,gravity,lookclose,commandtrait,spawned,mounttrait
+    traitnames: mounttrait,location,lookclose,spawned,commandtrait,gravity,inventory,scoreboardtrait,type,equipment,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: owner,equipment,location,type,inventory,scoreboardtrait,gravity,lookclose,commandtrait,spawned,mounttrait
+    traitnames: mounttrait,lookclose,location,spawned,commandtrait,gravity,inventory,scoreboardtrait,type,owner,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
