--- a/server/plugins/LevelPoints/Settings/Levels.yml
+++ b/server/plugins/LevelPoints/Settings/Levels.yml
@@ -26,28 +26,49 @@ Level: 1
 #############################
 #        Max Level          #
 #############################
-MaxLevel: 100
+MaxLevel: 30
 
 #############################
 #   If you want prestige    #
 #############################
-Prestige: true
+Prestige: false
 
 
 #############################
 #     Custom Leveling       #
 #############################
-CustomLeveling: false
+# y = 10*x^2 + 10*x^1.5 + 80*x
+CustomLeveling: true
 Level-1: 100
-Level-2: 200
-Level-3: 250
-Level-4: 500
-Level-5: 1000
-Level-6: 2000
-Level-7: 3000
-Level-8: 5000
-Level-9: 10000
-Level-10: 50000
+Level-2: 228
+Level-3: 381
+Level-4: 560
+Level-5: 761
+Level-6: 986
+Level-7: 1235
+Level-8: 1506
+Level-9: 1800
+Level-10: 2116
+Level-11: 2454
+Level-12: 2815
+Level-13: 3198
+Level-14: 3603
+Level-15: 4030
+Level-16: 4480
+Level-17: 4950
+Level-18: 5443
+Level-19: 5958
+Level-20: 6494
+Level-21: 7052
+Level-22: 7631
+Level-23: 8233
+Level-24: 8855
+Level-25: 9500
+Level-26: 10165
+Level-27: 10852
+Level-28: 11561
+Level-29: 12291
+Level-30: 13043
 
 #############################################
 #   Prestige Custom Leveling                #
