--- a/server/plugins/AntiXray/config.yml
+++ b/server/plugins/AntiXray/config.yml
@@ -8,7 +8,7 @@ RecoverItem:
   Lore: §a这是一瓶神奇的玉米%§a右键吃掉它可以增加100挖矿点数
   Recipe: 0-gold_ingot-0-gold_ingot-gold_ingot-gold_ingot-0-gold_ingot-0
 ToolsLimit: iron_pickaxe,wooden_pickaxe,stone_pickaxe,diamond_pickaxe,golden_pickaxe
-Worlds: world,world_nether
+Worlds: world,world_nether,shengcun,kuangjie
 Notify: true
 world:
   BlockInfo: gold_ore:10,iron_ore:5,diamond_ore:30,emerald_ore:50
@@ -22,3 +22,15 @@ world_nether:
   RecoverPointByBreakingBlock:
     OnUse: false
     BlockInfo: soul_sand:1
+shengcun:
+  BlockInfo: gold_ore:10,iron_ore:5,diamond_ore:30,emerald_ore:50
+  HeightUnlimit: 60
+  RecoverPointByBreakingBlock:
+    OnUse: true
+    BlockInfo: stone:1,grass_block:1
+kuangjie:
+  BlockInfo: gold_ore:10,iron_ore:5,diamond_ore:30,emerald_ore:50
+  HeightUnlimit: 60
+  RecoverPointByBreakingBlock:
+    OnUse: true
+    BlockInfo: stone:1,grass_block:1
