--- a/server/plugins/DungeonsXL/maps/diaolingwang/config.yml
+++ b/server/plugins/DungeonsXL/maps/diaolingwang/config.yml
@@ -5,3 +5,70 @@ title:
   subtitle: "&6你共有5条命"
   
 time: 6000
+
+dps:
+  exp: 100-200
+  bonusRewardProb: 0.005
+  '1':
+    cmd: ph giveitem %player% mjy:diaolingwang_sword
+    chance: 0.08
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&9凋零王的长剑"
+      model: 28
+  '2':
+    cmd: give %player% diamond 14
+    chance: 0.15
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石14个"
+      model: 0
+  '3':
+    cmd: give %player% diamond 8
+    chance: 0.19
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石8个"
+      model: 0
+  '4':
+    cmd: give %player% emerald 6
+    chance: 0.12
+    icon:
+      id: EMERALD
+      displayName: "&6绿宝石6个"
+      model: 0
+  '5':
+    cmd: ph giveitem %player% mjy:diaolingwang_head
+    chance: 0.08
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&5凋零王的皇冠"
+      model: 11
+  '6':
+    cmd: ph giveitem %player% mjy:yeren_sword
+    chance: 0.12
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&8夜刃"
+      model: 33
+  '7':
+    cmd: ph giveitem %player% mjy:tiaozhanzhe_sword
+    chance: 0.1
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&5挑战者之剑"
+      model: 49
+  '8':
+    cmd: ph giveitem %player% mjy:diaolingwang_chest
+    chance: 0.06
+    icon:
+      id: LEATHER_BOOTS
+      displayName: "&5凋零王的护甲"
+      model: 12
+  '9':
+    cmd: ph giveitem %player% mjy:gujian_sword
+    chance: 0.1
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&9骨剑"
+      model: 35
