--- a/server/plugins/DungeonsXL/maps/lieyanwang/config.yml
+++ b/server/plugins/DungeonsXL/maps/lieyanwang/config.yml
@@ -7,3 +7,78 @@ title:
   subtitle: "&6你共有5条命"
   
 time: 6000
+
+dungeonManager:
+  minPlayers: 1
+  maxPlayers: 4
+  minLevel: 9
+  icon:
+    id: PAPER
+    model: 18
+    
+dps:
+  exp: 100-200
+  bonusRewardProb: 0.005
+  '1':
+    cmd: ph giveitem %player% mjy:lieyan_sword
+    chance: 0.06
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&c烈焰"
+      model: 54
+  '2':
+    cmd: ph giveitem %player% mjy:tiechi_sword
+    chance: 0.18
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&2铁齿剑"
+      model: 26
+  '3':
+    cmd: ph giveitem %player% mjy:shilian_sword
+    chance: 0.08
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&8试炼剑"
+      model: 29
+  '4':
+    cmd: give %player% gold_ingot 32
+    chance: 0.20
+    icon:
+      id: GOLD_INGOT
+      displayName: "&f金锭32个"
+      model: 0
+  '5':
+    cmd: give %player% blaze_rod 16
+    chance: 0.1
+    icon:
+      id: BLAZE_ROD
+      displayName: "&f烈焰棒16个"
+      model: 0
+  '6':
+    cmd: give %player% diamond 10
+    chance: 0.11
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石10个"
+      model: 0
+  '7':
+    cmd: eco give %player% 400
+    chance: 0.11
+    icon:
+      id: STICK
+      displayName: "&6400金币"
+      model: 29
+  '8':
+    cmd: eco give %player% 450
+    chance: 0.08
+    icon:
+      id: STICK
+      displayName: "&6450金币"
+      model: 29
+  '9':
+    cmd: give %player% diamond 16
+    chance: 0.08
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石16个"
+      model: 0
