--- a/server/plugins/DungeonsXL/maps/luoxuecun/config.yml
+++ b/server/plugins/DungeonsXL/maps/luoxuecun/config.yml
@@ -11,3 +11,85 @@ time: 9000
 requirements:
   forbiddenItems:
     - POPPY
+    
+dungeonManager:
+  minPlayers: 1
+  maxPlayers: 4
+  minLevel: 5
+  icon:
+    id: PAPER
+    model: 18
+    
+dps:
+  exp: 100-200
+  bonusRewardProb: 0.005
+  '1':
+    cmd: ph giveitem %player% mjy:wushi_sword
+    chance: 0.09
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&9武士剑"
+      model: 27
+  '2':
+    cmd: ph giveitem %player% mjy:bailian_chest
+    chance: 0.09
+    icon:
+      id: LEATHER_CHESTPLATE
+      displayName: "&b百炼胸甲"
+      model: 15
+  '3':
+    cmd: ph giveitem %player% mjy:bailian_leg
+    chance: 0.09
+    icon:
+      id: LEATHER_LEGGINGS
+      displayName: "&b百炼护腿"
+      model: 15
+  '4':
+    cmd: ph giveitem %player% mjy:bailian_feet
+    chance: 0.09
+    icon:
+      id: LEATHER_BOOTS
+      displayName: "&b百炼靴子"
+      model: 15
+  '5':
+    cmd: give %player% gold_ingot 10
+    chance: 0.18
+    icon:
+      id: GOLD_INGOT
+      displayName: "&f金锭10个"
+      model: 0
+  '6':
+    cmd: ph giveitem %player% mjy:bailian_head
+    chance: 0.09
+    icon:
+      id: LEATHER_HELMET
+      displayName: "&b百炼头盔"
+      model: 14
+  '7':
+    cmd: give %player% diamond 6
+    chance: 0.11
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石6个"
+      model: 0
+  '8':
+    cmd: eco give %player% 200
+    chance: 0.11
+    icon:
+      id: STICK
+      displayName: "&6200金币"
+      model: 29
+  '9':
+    cmd: ph giveitem %player% mjy:tiaozhanzhe_axe
+    chance: 0.06
+    icon:
+      id: DIAMOND_AXE
+      displayName: "&5挑战者之斧"
+      model: 13
+  '10':
+    cmd: give %player% diamond 12
+    chance: 0.09
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石12个"
+      model: 0
