--- a/server/plugins/DungeonsXL/maps/shouhuzheyingdi/config.yml
+++ b/server/plugins/DungeonsXL/maps/shouhuzheyingdi/config.yml
@@ -7,3 +7,85 @@ title:
   subtitle: "&6你共有3条命"
   
 time: 6000
+
+dungeonManager:
+  minPlayers: 1
+  maxPlayers: 4
+  minLevel: 8
+  icon:
+    id: PAPER
+    model: 18
+    
+dps:
+  exp: 100-200
+  bonusRewardProb: 0.005
+  '1':
+    cmd: ph giveitem %player% mjy:shouhuzhe_sword
+    chance: 0.08
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&3守护者之剑"
+      model: 30
+  '2':
+    cmd: ph giveitem %player% mjy:shouhuzhe_chest
+    chance: 0.09
+    icon:
+      id: LEATHER_CHESTPLATE
+      displayName: "&3守护者胸甲"
+      model: 19
+  '3':
+    cmd: ph giveitem %player% mjy:shouhuzhe_legs
+    chance: 0.09
+    icon:
+      id: LEATHER_LEGGINGS
+      displayName: "&3守护者护腿"
+      model: 11
+  '4':
+    cmd: ph giveitem %player% mjy:shouhuzhe_boots
+    chance: 0.09
+    icon:
+      id: LEATHER_BOOTS
+      displayName: "&3守护者靴子"
+      model: 11
+  '5':
+    cmd: give %player% iron_ingot 24
+    chance: 0.18
+    icon:
+      id: IRON_INGOT
+      displayName: "&f铁锭24个"
+      model: 0
+  '6':
+    cmd: ph giveitem %player% mjy:shouhuzhe_head
+    chance: 0.09
+    icon:
+      id: LEATHER_HELMET
+      displayName: "&3守护者头盔"
+      model: 10
+  '7':
+    cmd: give %player% diamond 8
+    chance: 0.11
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石8个"
+      model: 0
+  '8':
+    cmd: eco give %player% 270
+    chance: 0.11
+    icon:
+      id: STICK
+      displayName: "&6270金币"
+      model: 29
+  '9':
+    cmd: eco give %player% 400
+    chance: 0.08
+    icon:
+      id: STICK
+      displayName: "&6400金币"
+      model: 29
+  '10':
+    cmd: give %player% diamond 16
+    chance: 0.08
+    icon:
+      id: DIAMOND
+      displayName: "&6钻石16个"
+      model: 0
