--- a/server/plugins/Multiverse-Core/worlds.yml
+++ b/server/plugins/Multiverse-Core/worlds.yml
@@ -1,51 +1,4 @@
 worlds:
-  world:
-    ==: MVWorld
-    hidden: 'false'
-    alias: 主世界
-    color: WHITE
-    style: NORMAL
-    pvp: 'true'
-    scale: '1.0'
-    respawnWorld: ''
-    allowWeather: 'true'
-    difficulty: HARD
-    spawning:
-      ==: MVSpawnSettings
-      animals:
-        ==: MVSpawnSubSettings
-        spawn: 'true'
-        spawnrate: '-1'
-        exceptions: []
-      monsters:
-        ==: MVSpawnSubSettings
-        spawn: 'true'
-        spawnrate: '-1'
-        exceptions: []
-    entryfee:
-      ==: MVEntryFee
-      amount: '0.0'
-    hunger: 'true'
-    autoHeal: 'true'
-    adjustSpawn: 'true'
-    portalForm: ALL
-    gameMode: SURVIVAL
-    keepSpawnInMemory: 'true'
-    spawnLocation:
-      ==: MVSpawnLocation
-      x: 107.55708691620322
-      y: 31.0
-      z: -107.41721523924285
-      pitch: 3.1174965
-      yaw: -359.33057
-    autoLoad: 'true'
-    bedRespawn: 'true'
-    worldBlacklist: []
-    environment: NORMAL
-    seed: '-6431334360570016401'
-    generator: 'null'
-    playerLimit: '-1'
-    allowFlight: 'false'
   world_the_end:
     ==: MVWorld
     hidden: 'false'
@@ -93,17 +46,17 @@ worlds:
     generator: 'null'
     playerLimit: '-1'
     allowFlight: 'false'
-  boss:
+  world:
     ==: MVWorld
     hidden: 'false'
-    alias: ''
+    alias: 主世界
     color: WHITE
     style: NORMAL
     pvp: 'true'
     scale: '1.0'
     respawnWorld: ''
     allowWeather: 'true'
-    difficulty: EASY
+    difficulty: HARD
     spawning:
       ==: MVSpawnSettings
       animals:
@@ -127,23 +80,23 @@ worlds:
     keepSpawnInMemory: 'true'
     spawnLocation:
       ==: MVSpawnLocation
-      x: 232.0
-      y: 64.0
-      z: 251.0
-      pitch: 0.0
-      yaw: 0.0
+      x: 107.55708691620322
+      y: 31.0
+      z: -107.41721523924285
+      pitch: 3.1174965
+      yaw: -359.33057
     autoLoad: 'true'
     bedRespawn: 'true'
     worldBlacklist: []
     environment: NORMAL
-    seed: '-6749430873974053892'
+    seed: '-6431334360570016401'
     generator: 'null'
     playerLimit: '-1'
-    allowFlight: 'true'
+    allowFlight: 'false'
   shengcun:
     ==: MVWorld
     hidden: 'false'
-    alias: shengcun
+    alias: 生存
     color: WHITE
     style: NORMAL
     pvp: 'true'
@@ -237,7 +190,7 @@ worlds:
   kuangjie:
     ==: MVWorld
     hidden: 'false'
-    alias: kuangjie
+    alias: 矿界
     color: WHITE
     style: NORMAL
     pvp: 'true'
